# MathModeling

./: CMakeLists.txt  README.md  graphics.py  input.txt
data/: fractions.txt  input.txt  test_fractions.txt
src/: cluster.cpp  cluster.hpp  fraction.cpp  fraction.hpp  io.cpp  io.hpp  main.cpp  model.cpp  model.hpp
tests/: test_fractions.txt  tests.cpp  tests.hpp
